--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,7 +28,7 @@
       property="og:description"
       content="Automatically import transcripts from Fireflies, Otter, and Zoom. Generate AI summaries, extract action items, and link mentions to your Obsidian vault—instantly."
     />
-    <meta property="og:image" content="https://docs.meetingmind.me/logo.svg" />
+    <meta property="og:image" content="https://docs.meetingmind.me/meetingmind_logo_600.png" />
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -41,7 +41,7 @@
       name="twitter:description"
       content="Automatically import transcripts from Fireflies, Otter, and Zoom. Generate AI summaries, extract action items, and link mentions to your Obsidian vault—instantly."
     />
-    <meta name="twitter:image" content="https://docs.meetingmind.me/logo.svg" />
+    <meta name="twitter:image" content="https://docs.meetingmind.me/meetingmind_logo_600.png" />
     
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
